<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_member_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_detail_member_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/izone_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/fullname"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textSize="16sp"
            android:text="@string/none"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/rank"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_detail_rank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textSize="16sp"
            android:text="@string/none"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/role"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_detail_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textSize="16sp"
            android:text="@string/none"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/birthday"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_detail_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textSize="16sp"
            android:text="@string/none"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/zodiac"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_detail_zodiac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textSize="16sp"
            android:text="@string/none"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/height"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_detail_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textSize="16sp"
            android:text="@string/none"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/weight"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_detail_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textSize="16sp"
            android:text="@string/none"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/bloodtype"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_detail_bloodtype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textSize="16sp"
            android:text="@string/none"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/hobby"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_detail_hobby"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textSize="16sp"
            android:text="@string/none"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/speciality"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_detail_speciality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textSize="16sp"
            android:text="@string/none"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/official_color"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_detail_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textSize="16sp"
            android:text="@string/none"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/facts"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_detail_facts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textSize="16sp"
            android:text="@string/none"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/agency"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_detail_agency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textSize="16sp"
            android:text="@string/none"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_member_debut_photo"
                android:layout_width="match_parent"
                android:layout_height="620dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/izone_logo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/debut"
                android:textStyle="italic"
                android:textSize="10sp"
                android:gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/btn_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:text="@string/favorite"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/btn_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:text="@string/share"
                android:textSize="14sp"/>
        </LinearLayout>

    </LinearLayout>





</ScrollView>